[package]
name = "linux-stat"
version = "0.1.0"
edition = "2018"
authors = ["shurizzle <shura1991@gmail.com>"]
license = "MIT"
description = "A pure Rust library that implements stat functions on linux with only syscalls."
keywords = ["syscall", "no_std", "linux", "stat", "fs"]
readme = "README.md"
repository = "https://github.com/shurizzle/linux-stat"
homepage = "https://github.com/shurizzle/linux-stat"
documentation = "https://docs.rs/linux-stat"


[features]
default = ["std"]
std = ["linux-syscalls/std", "cstr_core/alloc"]
linux_4_11 = []

[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = { version = "0.2.144", default-features = false }

[dependencies]
linux-syscalls = { version = "0.1.1", default-features = false }
cstr_core = { version = "0.2.6", default-features = false }
cty = { version = "0.2.2", default-features = false }
