[package]
name = "linux-stat"
version = "0.3.2"
edition = "2021"
authors = ["shurizzle <shura1991@gmail.com>"]
license = "MIT"
description = "A pure Rust library that implements stat functions on linux with only syscalls."
keywords = ["syscall", "no_std", "linux", "stat", "fs"]
readme = "README.md"
repository = "https://github.com/shurizzle/linux-stat"
homepage = "https://github.com/shurizzle/linux-stat"
documentation = "https://docs.rs/linux-stat"
rust-version = "1.63.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "aarch64-unknown-linux-gnu",
  "arm-unknown-linux-gnueabi",
  "mips-unknown-linux-gnu",
  "mips64-unknown-linux-gnuabi64",
  "powerpc-unknown-linux-gnu",
  "powerpc64-unknown-linux-gnu",
  "riscv32gc-unknown-linux-gnu",
  "riscv64gc-unknown-linux-gnu",
  "s390x-unknown-linux-gnu",
  "i686-unknown-linux-gnu",
  "loongarch64-unknown-linux-gnu",
]

[features]
default = ["std"]
std = ["linux-syscalls/std", "cstr_core/alloc"]
linux_4_11 = []

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
libc = { version = "0.2.147", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
linux-raw-sys = "0.4.3"

[dependencies]
linux-syscalls = { version = "0.3.1", default-features = false }

[target.'cfg(all(unix, not(target_arch = "loongarch64")))'.dependencies]
cstr_core = { version = "0.2.6", default-features = false }
cty = { version = "0.2.2", default-features = false }
