[package]
name = "errno-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
ureq = "2.6.2"
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
atoi = "2.0.0"
